--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -1791,6 +1791,7 @@
                 url: "http://192.168.0.231:3000/deleteProductReview",
                 type: "post",
                 data: {
+                    productSeq: productSeq,
                     productRevSeq:seq,
                     userSeq:userSeq
                 },
