--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -425,7 +425,7 @@
 
 <script>
 $(document).ready(function(){
-
+    
     let urlParams = location.search.split(/[?&]/).slice(1).map(function(paramPair) {
             return paramPair.split(/=(.+)?/).slice(0, 2);
         }).reduce(function(obj, pairArray) {
@@ -438,7 +438,16 @@ $(document).ready(function(){
     let sessionId = JSON.parse(sessionStorage.getItem("login"));
     console.log(sessionId);
 
-    $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName)
+    
+    if(sessionId==null){
+        $("#_replyinput").attr("src","http://localhost:3000/upload/wanza.png");
+        }else{
+        $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName);
+    }
+
+
+
+    //$("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName)
     //글 삭제하기
 
     //조회수 증가시키기
@@ -575,6 +584,7 @@ $(document).ready(function(){
             if(size!=0){
                 $.each(list, function(i, val){
                     if(val.qcDel == 0){
+                        
                         var pfname = val.profileName;
                         if(pfname == 0 || pfname == null){
                             pfname = '../image/avatar.png';
