--- a/view/login/login.html
+++ b/view/login/login.html
@@ -247,6 +247,8 @@
                 dataType: 'text',
                 success:function(email){
                     alert("kakao ajax 성공");
+                    Kakao.Auth.login()
+                    
                     //console.log(session.setattribute(getItem("login")));
                     klogin(email);
                     //location.href = "../community/mainCommunity.html"
@@ -279,6 +281,7 @@
                     sessionStorage.setItem("login", JSON.stringify(data));
                     location.href = "../../index.html";
                     alert(sessionStorage.setItem("login", JSON.stringify(data)));
+                    
                 } else {
                     alert('klogin fail');
                 }
