--- a/view/admin/community-eventWrite.html
+++ b/view/admin/community-eventWrite.html
@@ -10,35 +10,70 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../../css/style.css">
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"> <!-- jQuery UI css -->
+        <link rel="stylesheet" type="text/css" href="../../css/admin/calendar.css"> <!-- 달력 -->   
+
         <!-- 써머노트 -->
         <link rel="stylesheet" href="../../css/summernote/summernote-lite.css">
         <link rel="stylesheet" href="../../css/summernote/font/summernote.eot">
-        <!-- 써머노트 -->
+ 
     </head>
     <style>
+    input:read-only{
+        background-color: #e6e6e6;
+    }
 
+    .tab_btn{
+        width: 100%;
+        height: 50px;
+        margin: 10px;
+        margin-left: 15px;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        background-color: #35ab6f;
+        box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
+    }
+    .tab_btn:active{
+        background: radial-gradient(#35ab6f,#56c084);
+        transition: all .33s cubic-bezier(.685,.0473,.346,1)
+    }
 
-        input:read-only{
-            background-color: #e6e6e6;
-        }
-
-        .tab_btn{
-            width: 100%;
-            height: 50px;
-            margin: 10px;
-            margin-left: 15px;
-            border: none;
-            border-radius: 4px;
-            color: white;
-            background-color: #35ab6f;
-            box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
-        }
-        .tab_btn:active{
-            background: radial-gradient(#35ab6f,#56c084);
-            transition: all .33s cubic-bezier(.685,.0473,.346,1)
-        }
-
+            /* 데이트피커 설정 */
+    #ui-datepicker-div select{
+        text-align-last: center;
+        width: 40%;
+        border: none;
+        border-radius: 5px;
+        margin-right: 2px;
+    }
+    #ui-datepicker-div .ui-datepicker-header{
+        border: none;
+        background: #56c084;
+        color: #222222;
+        font-weight: bold;
+    }
+    #ui-datepicker-div .ui-datepicker-header a{
+        margin-top: 4px;
+    }
+    #ui-datepicker-div .ui-datepicker-month{
+        margin-left: 10px;
+    }
+    #ui-datepicker-div .ui-datepicker-title option{
+        text-align-last: center;
+    }
+    #ui-datepicker-div .ui-state-default{
+        border: #35ab6f;
+        background: transparent;
+        color: #424242;
+        text-align: center;
+        width: 40px; height: 30px;
+        border-radius: 50%;
+    }
+    #ui-datepicker-div .ui-state-default:hover{
+        background: #35ab6f;
+        color: white;
+    }
     </style>
 
 
@@ -55,6 +90,7 @@
             <div class="row" style="margin-top: 50px; margin-bottom: 100px;">
                 <div class="col-xl-3"></div>
                 <div class="col-xl-6">
+
                     
                     <!-- 이벤트 기간 입력 -->
                     <form id="eventForm">
@@ -62,12 +98,12 @@
                             <h3 style="font-weight: bold; margin-left: 20px;">이벤트 등록</h3>
                         </div>
                         <div class="row" style="margin-left: 4px;">
-                            <div class="form-group" style="width: 40%;" id="hideSeq">
-                                <input type="text" class="form-control" id="startDate" placeholder="이벤트 시작일을 입력해주세요 ex(2020/04/14)" name="eventStartDate">
+                            <div class="form-group" style="width: 40%;">
+                                <input autocomplete="off" type="text" class="datepicker s_date form-control" id="startDate" placeholder="이벤트 시작일을 입력해주세요 ex(2020/04/14)" name="eventStartDate" >
                             </div>
                                 <span>&ensp;~&ensp;</span>
                             <div class="form-group" style="width: 40%;">
-                                <input type="text" class="form-control" id="endDate" placeholder="이벤트 종료일을 입력해주세요 ex(2020/04/15)" name="eventEndDate">               
+                                <input type="text" autocomplete="off" class="datepicker e_date form-control" id="endDate " placeholder="이벤트 종료일을 입력해주세요 ex(2020/04/15)" name="eventEndDate">               
                             </div>
                         </div>
                         <!-- 이벤트 제목 입력 -->
@@ -109,6 +145,7 @@
                                 </div> 
                             </div>
                         </div>
+                        <input id="hideSeq" type='hidden' name='productSeq' value='0'>
 
 
                     </form>
@@ -117,6 +154,7 @@
                     <div id="productNameInput" class="form-group" style="margin-top: 10px;">
                         <input type="text" class="form-control" id="productName" placeholder="이름으로 검색해서 상품 찾아오기" onkeyup="if(window.event.keyCode==13){searchProduct()}" style="width: 50%;">               
                     </div>
+                    
         
                     <!-- 상품 list up -->
                     <div class="row" style="text-align: center;" id="_productListUp">  
@@ -140,6 +178,7 @@
 
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script><!-- jQuery UI 라이브러리 -->
     <script src="../../js/includeHTML.js"></script>
     <script src="../../js/header.js"></script>
     <script src="../../js/slang.js"></script>
@@ -148,6 +187,33 @@
     <script src="../../css/summernote/summernote-lite.js"></script>
     <script src="../../css/summernote/summernote-ko-KR.js"></script>
 <script>
+ 
+$.datepicker.setDefaults({
+        showAnim:'slideDown',
+        changeMonth: true,
+        changeYear: true,
+        dateFormat: 'yy/mm/dd',
+        monthNames: ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'],
+        monthNamesShort: ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'],
+        dayNames: ['일','월','화','수','목','금','토'],
+        dayNamesShort: ['일','월','화','수','목','금','토'],
+        dayNamesMin: ['일','월','화','수','목','금','토'],
+        showMonthAfterYear: true,
+        yearSuffix: '년' 
+    });
+
+$('.s_date').datepicker({
+    onClose: function( selectedDate ) {
+        $(".e_date").datepicker( "option", "minDate", selectedDate );
+    }   
+});
+$('.e_date').datepicker({
+    onClose: function( selectedDate ) {
+        $(".s_date").datepicker( "option", "maxDate", selectedDate );
+    }   
+});
+
+
     // 상품 검색
     function searchProduct(){
         app ="";
@@ -181,6 +247,13 @@
 
     // 이벤트 작성 완료
     function completeEvent(){
+        if($("#startDate").val()=="" || $("#endDate").val()==""){
+            alert("날짜를 확인해주세요");
+        }
+        /* 유효성 검사 수정 */
+        else if(dd){
+
+        }
         var form = $('#eventForm').serialize();
 
          $.ajax({
@@ -233,10 +306,9 @@
                         +"<div class='input-group-append'>"
                         +"<button class='btn btn-outline-secondary' type='button' onclick='addCancel()'><i class='fa fa-times' aria-hidden='true'></i></button>"
                         +"</div>"                        
-                        +"</div>"; 
-                    // form을 걸었을때 의도치 않은 오류로 시퀀스를 다른곳에 숨겼음                    
-                    proSeq = "<input type='hidden' name='productSeq' value='"+dto.productSeq+"'>" ;
-                    $("#hideSeq").append(proSeq);      
+                        +"</div>";                   
+
+                    $("#hideSeq").attr("value",dto.productSeq);      
                     $("#productNameInput").after(app);
 
                 },error:function(){
@@ -278,6 +350,7 @@
             $("#productNameInput").show();
 
         }else{
+            $("#hideSeq").val(0);
             $("#productNameInput").hide();
             $("#_productListUp").empty();
             $("#productName").val("");            
