--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -438,7 +438,17 @@ $(document).ready(function(){
     let sessionId = JSON.parse(sessionStorage.getItem("login"));
     console.log(sessionId);
 
-    $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName)
+    if(sessionId==null){
+        $("#_replyinput").attr("src","http://localhost:3000/upload/");
+    }else{
+        $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName);
+    }
+
+
+
+
+
+    
     //글 삭제하기
 
     //조회수 증가시키기
