--- a/view/admin/community-storyTag.html
+++ b/view/admin/community-storyTag.html
@@ -779,7 +779,7 @@ function getStoryTagList(pageNum) {
 
 
                         +'<div class="row" style="margin: 20px 0px;">'
-                        +    '<div class="col">'
+                        +    '<div style="width: 680px;">'
                         +        '<div class="row" style="height: 50px; margin:20px 0px;">'
                         +            '<div class="col d-flex justify-content-center align-items-center"><p style="font-size: 18px;"><b>1.</b> 이미지를 클릭하여 태그를 넣을 좌표를 구하세요.</p></div>'
                         +        '</div>'
@@ -815,7 +815,7 @@ function getStoryTagList(pageNum) {
                         +    '</div>'
 
                         // 메인 사진
-                        +    '<div class="col" seq="'+(i+1)+'" id="userImg_'+seq+'" name="userImg">';
+                        +    '<div seq="'+(i+1)+'" id="userImg_'+seq+'" name="userImg" style="width: 600px; margin-left: 30px;">';
 
                         /* 태그 들어가는 부분 */
                     app+=        '<img width="600px" height="600px" style="width: 720px;height: 660px; object-fit: cover;" src="http://192.168.0.231:3000/upload/'+val.cardFileName+'">'
