--- a/view/collback.html
+++ b/view/collback.html
@@ -8,7 +8,7 @@
 
 <body>
     <script type="text/javascript">
-        var naver_id_login = new naver_id_login("dSA9KIZOunKpoBfOJdB9", "http://localhost:8090/collback.html");
+        var naver_id_login = new naver_id_login("dSA9KIZOunKpoBfOJdB9", "http://localhost:8090/view/collback.html");
         // 접근 토큰 값 출력
         alert(naver_id_login.oauthParams.access_token);
         // 네이버 사용자 프로필 조회
@@ -17,7 +17,12 @@
         function naverSignInCallback() {
             alert(naver_id_login.getProfileData('email'));
             alert(naver_id_login.getProfileData('nickname'));
-            alert(naver_id_login.getProfileData('age'));
+
+            const email = naver_id_login.getProfileData('email');
+            const nickname = naver_id_login.getProfileData('nickname');
+            const name = naver_id_login.getProfileData('name');
+            const mobile = naver_id_login.getProfileData('mobile');
+            
         }
         window.close();
 
